# JPNSSP-converter

./: .gitignore  .tool-versions  README.md  pyproject.toml
code/: data-validation.ipynb  parquet-to-csv-converter.py  ssp-pop-converter.py
